# F1-Prode

./: .gitignore  LICENSE  README.md  compare.py  create_lineup.py  create_season_settings.py  fast_solution.py  fetch_results_and_compare.py  gen_fake_data.py  get_data.py  get_drivers_and_team.py  get_results_compare.py  get_session_results.py  manage.py  pyproject.toml  requirements.txt  reset_all.py
F1Prode/: asgi.py  settings.py  static_variables.py  urls.py  wsgi.py
accounts/: admin.py  api.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_points.py  0002_customuser_best_prediction.py  0003_yearscore.py  0004_remove_customuser_points_yearscore_points.py  0005_delete_yearscore.py  0006_friendrequest_friendrequest_unique_friend_request.py  0007_customuser_amount_p_guessed_and_more.py  0008_remove_customuser_amount_p_guessed_and_more.py
accounts/templates/: profile.html
home/: views.py
home/templates/: home.html
home/templatetags/: home_filters.py
predictions/: admin.py  api.py  models.py  urls.py  views.py
predictions/api/: __init__.py  champions.py  predictions.py  scoring.py  sessions.py  utils.py
predictions/migrations/: 0001_initial.py  0002_driver_year_alter_driver_number.py  0003_racingteam_year.py  0004_alter_driver_options.py  0005_predictedposition_correct.py  0006_alter_predictedposition_options_alter_result_options.py  (+26 more)
ranking/: admin.py  api.py  forms.py  models.py  urls.py  views.py
social/: api.py  forms.py  models.py  urls.py  views.py
templates/: main.html  top_bar.html
(+27 files in other folders)
