[project]
name = "f1prode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-allauth>=65.7.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.0",
    "fastf1>=3.5.3",
    "flake8>=7.2.0",
]
